--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="remember_activities">Remember Activities</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_detail_pencapaian">Detail Pencapaian</string>
+
 </resources>
