Memperbaiki beberapa kesalahan dan menambahkan alarm recivier

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="title_activity_pencapain_detail">Detail Pencapaian</string>
     <string name="tambah_kegiatan">Tambah Kegiatan</string>
     <string name="edit_kegiatan">Edit Kegiatan</string>
+    <string name="tanggal">Tanggal</string>
+    <string name="nama_kegiatan">Nama Kegiatan</string>
 
 
 </resources>
