menambahkan layout baru

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="title_activity_pencapain_detail">Detail Pencapaian</string>
     <string name="tambah_kegiatan">Tambah Kegiatan</string>
     <string name="edit_kegiatan">Edit Kegiatan</string>
+    <string name="title_activity_tentang">tentang</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 
 </resources>
